--- a/trial.html
+++ b/trial.html
@@ -12,7 +12,7 @@
     
     <!-- Embed Google Form -->
     <iframe 
-      src="https://docs.google.com/forms/d/1MxN1TaP7G5yYT5YHC6fzHh0oP2bz8KhGNup-iVmMPuA/edit#responses?embedded=true" 
+      src="https://forms.gle/6xLUbr3sMAWjWEWf9?embedded=true" 
       width="100%" 
       height="800" 
       frameborder="0" 
@@ -27,5 +27,6 @@
   </div>
 </body>
 </html>
+
 
 
