--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,7 @@
   <div class="bg-white shadow-xl rounded-2xl p-8 w-full max-w-2xl">
     <h1 class="text-3xl font-bold text-center text-indigo-600 mb-6">Create an Account</h1>
     
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScUR_FORM_ID/viewform?embedded=true" 
+    <iframe src="https://forms.gle/j3X5naywX3nGD1xx9?embedded=true" 
             width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">
       Loading…
     </iframe>
