--- a/signup.html
+++ b/signup.html
@@ -54,9 +54,9 @@
     let email = document.getElementById("email").value;
 
     Email.send({
-      SecureToken : "YOUR_SMTPJS_TOKEN", 
+      SecureToken : "b2b3c836-69e6-47c8-841d-f957fc717120", 
       To : email,
-      From : "youremail@gmail.com",
+      From : "egyanleteraho@gmail.com",
       Subject : "SparkLearn OTP Verification",
       Body : "Your OTP is " + generatedOTP
     }).then(
