--- a/signup.html
+++ b/signup.html
@@ -9,12 +9,12 @@
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
   <div class="bg-white shadow-xl rounded-2xl p-8 w-full max-w-2xl">
     <h1 class="text-3xl font-bold text-center text-indigo-600 mb-6">Create an Account</h1>
-    
+
     <!-- OTP Form -->
     <form id="otpForm" class="space-y-4">
       <div>
         <label>Email</label>
-        <input type="email" id="email" class="border w-full p-2 rounded" required />
+        <input type="email" id="email" class="border w-full p-2 rounded" placeholder="Enter your email" required />
       </div>
       <button type="button" onclick="sendOTP()" 
         class="bg-indigo-600 text-white px-4 py-2 rounded">
@@ -25,7 +25,7 @@
     <!-- OTP Verification -->
     <div id="otpSection" class="mt-4 hidden">
       <label>Enter OTP</label>
-      <input type="text" id="otpInput" class="border w-full p-2 rounded" />
+      <input type="text" id="otpInput" class="border w-full p-2 rounded" placeholder="Enter OTP" />
       <button onclick="verifyOTP()" 
         class="bg-green-600 text-white px-4 py-2 mt-2 rounded">
         Verify OTP
@@ -39,7 +39,7 @@
         Loading…
       </iframe>
     </div>
-    
+
     <p class="mt-4 text-center text-sm text-gray-600">
       Already have an account? <a href="login.html" class="text-indigo-600 hover:underline">Log in</a>
     </p>
@@ -49,27 +49,42 @@
   let generatedOTP;
 
   async function sendOTP() {
+    const email = document.getElementById("email").value;
+    if (!email) {
+      alert("Please enter your email");
+      return;
+    }
+
+    // Generate 6-digit OTP
     generatedOTP = Math.floor(100000 + Math.random() * 900000);
-    let email = document.getElementById("email").value;
 
-    let response = await fetch("https://script.google.com/macros/s/AKfycbz58Hwop3C1YMWYYB_z4HQ0sSzAHw0AklzXnjmz7KtG1UhevgUrTqKq98MKEyb32HLPEw/exec", {
-      method: "POST",
-      body: JSON.stringify({ email: email, otp: generatedOTP }),
-      headers: { "Content-Type": "application/json" }
-    });
+    try {
+      const response = await fetch(
+        "https://script.google.com/macros/s/AKfycbwVOgvOoZOPBYHRUPMVaCxMPLiSYQykLNPKJnX9k3zKFYE_DB6h8-kky-aQw5DSU09NQQ/exec",
+        {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ email: email, otp: generatedOTP })
+        }
+      );
 
-    let result = await response.text();
-    if (result === "Sent") {
-      alert("✅ OTP sent to " + email + ". Check Inbox/Spam.");
-      document.getElementById("otpSection").classList.remove("hidden");
-    } else {
-      alert("❌ Error sending OTP: " + result);
+      const data = await response.json();
+
+      if (data.success) {
+        alert("✅ OTP sent to " + email + ". Check Inbox/Spam.");
+        document.getElementById("otpSection").classList.remove("hidden");
+      } else {
+        alert("❌ Error sending OTP: " + data.error);
+      }
+
+    } catch (err) {
+      alert("❌ Request failed: " + err);
     }
   }
 
   function verifyOTP() {
-    let userOTP = document.getElementById("otpInput").value;
-    if(userOTP == generatedOTP) {
+    const userOTP = document.getElementById("otpInput").value;
+    if (userOTP == generatedOTP) {
       alert("OTP Verified ✅ You may continue.");
       document.getElementById("formSection").classList.remove("hidden");
       document.getElementById("otpForm").classList.add("hidden");
