--- a/signup.html
+++ b/signup.html
@@ -1,98 +1,73 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Sign Up - SparkLearn</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+    <meta charset="UTF-8">
+    <title>Signup</title>
+    <style>
+        .hidden { display: none; }
+    </style>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
-  <div class="bg-white shadow-xl rounded-2xl p-8 w-full max-w-2xl">
-    <h1 class="text-3xl font-bold text-center text-indigo-600 mb-6">Create an Account</h1>
+<body>
 
-    <!-- OTP Form -->
-    <form id="otpForm" class="space-y-4">
-      <div>
-        <label>Email</label>
-        <input type="email" id="email" class="border w-full p-2 rounded" placeholder="Enter your email" required />
-      </div>
-      <button type="button" onclick="sendOTP()" 
-        class="bg-indigo-600 text-white px-4 py-2 rounded">
-        Send OTP
-      </button>
-    </form>
+<h2>Signup</h2>
 
-    <!-- OTP Verification -->
-    <div id="otpSection" class="mt-4 hidden">
-      <label>Enter OTP</label>
-      <input type="text" id="otpInput" class="border w-full p-2 rounded" placeholder="Enter OTP" />
-      <button onclick="verifyOTP()" 
-        class="bg-green-600 text-white px-4 py-2 mt-2 rounded">
-        Verify OTP
-      </button>
-    </div>
+<label>Email:</label>
+<input type="email" id="email" placeholder="Enter your email" required>
+<button onclick="sendOTP()">Send OTP</button>
 
-    <!-- Google Form (hidden until OTP success) -->
-    <div id="formSection" class="hidden mt-6">
-      <iframe src="https://forms.gle/j3X5naywX3nGD1xx9?embedded=true" 
-              width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">
-        Loading…
-      </iframe>
-    </div>
-
-    <p class="mt-4 text-center text-sm text-gray-600">
-      Already have an account? <a href="login.html" class="text-indigo-600 hover:underline">Log in</a>
-    </p>
-  </div>
+<div id="otpSection" class="hidden">
+    <label>Enter OTP:</label>
+    <input type="text" id="otpInput" placeholder="Enter OTP">
+    <button onclick="verifyOTP()">Verify OTP</button>
+</div>
 
 <script>
-  let generatedOTP;
+let generatedOTP;
 
-  async function sendOTP() {
+async function sendOTP() {
     const email = document.getElementById("email").value;
     if (!email) {
-      alert("Please enter your email");
-      return;
+        alert("Please enter your email");
+        return;
     }
 
     // Generate 6-digit OTP
     generatedOTP = Math.floor(100000 + Math.random() * 900000);
 
     try {
-      const response = await fetch(
-        "https://script.google.com/macros/s/AKfycbwVOgvOoZOPBYHRUPMVaCxMPLiSYQykLNPKJnX9k3zKFYE_DB6h8-kky-aQw5DSU09NQQ/exec",
-        {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ email: email, otp: generatedOTP })
+        const response = await fetch(
+            "https://script.google.com/macros/s/AKfycbxbhqQR-6FkgLxabA_In5UsCV7GrmbqM8YnCoOLDcksxB77M_n22cF57YJnaOoJLjHbXQ/exec",
+            {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ email: email, otp: generatedOTP })
+            }
+        );
+
+        const data = await response.json();
+
+        if (data.success) {
+            alert("✅ OTP sent! Check your email.");
+            document.getElementById("otpSection").classList.remove("hidden");
+        } else {
+            alert("❌ Error: " + data.error);
         }
-      );
-
-      const data = await response.json();
-
-      if (data.success) {
-        alert("✅ OTP sent to " + email + ". Check Inbox/Spam.");
-        document.getElementById("otpSection").classList.remove("hidden");
-      } else {
-        alert("❌ Error sending OTP: " + data.error);
-      }
 
     } catch (err) {
-      alert("❌ Request failed: " + err);
+        alert("❌ Request failed: " + err);
+        console.error(err);
     }
-  }
+}
 
-  function verifyOTP() {
+function verifyOTP() {
     const userOTP = document.getElementById("otpInput").value;
-    if (userOTP == generatedOTP) {
-      alert("OTP Verified ✅ You may continue.");
-      document.getElementById("formSection").classList.remove("hidden");
-      document.getElementById("otpForm").classList.add("hidden");
-      document.getElementById("otpSection").classList.add("hidden");
+    if (parseInt(userOTP) === generatedOTP) {
+        alert("✅ OTP Verified! Signup successful.");
     } else {
-      alert("❌ Invalid OTP. Try again.");
+        alert("❌ Invalid OTP. Try again.");
     }
-  }
+}
 </script>
+
 </body>
 </html>
