--- a/signup.html
+++ b/signup.html
@@ -1,73 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Signup</title>
-    <style>
-        .hidden { display: none; }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Signup Form</title>
 </head>
 <body>
+  <h2>Signup Form</h2>
 
-<h2>Signup</h2>
+  <form id="signupForm">
+    <label>Email:</label><br>
+    <input type="email" id="email" required><br><br>
 
-<label>Email:</label>
-<input type="email" id="email" placeholder="Enter your email" required>
-<button onclick="sendOTP()">Send OTP</button>
+    <label>Password:</label><br>
+    <input type="password" id="password" required><br><br>
 
-<div id="otpSection" class="hidden">
-    <label>Enter OTP:</label>
-    <input type="text" id="otpInput" placeholder="Enter OTP">
-    <button onclick="verifyOTP()">Verify OTP</button>
-</div>
+    <label>Confirm Password:</label><br>
+    <input type="password" id="confirmPassword" required><br><br>
 
-<script>
-let generatedOTP;
+    <label>OTP:</label><br>
+    <input type="text" id="otp" placeholder="Enter OTP"><br><br>
 
-async function sendOTP() {
-    const email = document.getElementById("email").value;
-    if (!email) {
-        alert("Please enter your email");
+    <button type="button" onclick="sendOtp()">Send OTP</button>
+    <button type="button" onclick="signup()">Signup</button>
+  </form>
+
+  <script>
+    let generatedOtp = null; // store OTP temporarily
+
+    function sendOtp() {
+      const email = document.getElementById('email').value;
+      if (!email) {
+        alert("Enter your email!");
         return;
-    }
+      }
 
-    // Generate 6-digit OTP
-    generatedOTP = Math.floor(100000 + Math.random() * 900000);
+      generatedOtp = Math.floor(100000 + Math.random() * 900000); // 6-digit OTP
 
-    try {
-        const response = await fetch(
-            "https://script.google.com/macros/s/AKfycbxbhqQR-6FkgLxabA_In5UsCV7GrmbqM8YnCoOLDcksxB77M_n22cF57YJnaOoJLjHbXQ/exec",
-            {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ email: email, otp: generatedOTP })
-            }
-        );
-
-        const data = await response.json();
-
+      fetch("https://script.google.com/macros/s/AKfycbyYXvMZYttcr4i0xXMtTHUSDqWRuVz4wuP5CbmphInZD6KuT-7s46RhNw7I42loODh7nQ/exec", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ email: email, otp: generatedOtp })
+      })
+      .then(res => res.json())
+      .then(data => {
         if (data.success) {
-            alert("✅ OTP sent! Check your email.");
-            document.getElementById("otpSection").classList.remove("hidden");
+          alert("OTP sent to " + email);
         } else {
-            alert("❌ Error: " + data.error);
+          alert("Error: " + data.error);
         }
-
-    } catch (err) {
-        alert("❌ Request failed: " + err);
-        console.error(err);
+      })
+      .catch(err => alert("Request failed: " + err));
     }
-}
 
-function verifyOTP() {
-    const userOTP = document.getElementById("otpInput").value;
-    if (parseInt(userOTP) === generatedOTP) {
-        alert("✅ OTP Verified! Signup successful.");
-    } else {
-        alert("❌ Invalid OTP. Try again.");
+    function signup() {
+      const password = document.getElementById('password').value;
+      const confirmPassword = document.getElementById('confirmPassword').value;
+      const enteredOtp = document.getElementById('otp').value;
+
+      if (password !== confirmPassword) {
+        alert("Passwords do not match!");
+        return;
+      }
+
+      if (enteredOtp != generatedOtp) {
+        alert("Invalid OTP!");
+        return;
+      }
+
+      alert("Signup successful!");
+      // Here you can send email/password to a database or another Apps Script endpoint
+      document.getElementById('signupForm').reset();
     }
-}
-</script>
-
+  </script>
 </body>
 </html>
