--- a/signup.html
+++ b/signup.html
@@ -243,8 +243,8 @@
 
     <script>
         // Configuration
-        const scriptUrl = 'https://script.google.com/macros/s/AKfycbx7ILenEenKB6nNddwcgZltGiDn0xmQQ1uc4Ft-Oh41yL8wzEyR4TDzxQX3xorn-XK0pw/exec';
-        const formUrl = 'https://forms.gle/jBaYdxNdjbJu4iQ69';
+        const scriptUrl = 'https://script.google.com/macros/s/AKfycbxVbPV7bCAWCdKbdBeRLyq6-5Y1OttJwAVIhtRZmVLCl1iCo2X1zBpTuvoy-4-SOIsalA/exec';
+        const formUrl = 'https://docs.google.com/forms/d/1pRVzxch_8J47sSfGM8UC-FxlMnf8NlYEDWohWTZfgsQ/edit#responses';
         
         // DOM Elements
         const errorMsg = document.getElementById('errorMsg');
