--- a/signup.html
+++ b/signup.html
@@ -244,7 +244,7 @@
     <script>
         // Configuration
         const scriptUrl = 'https://script.google.com/macros/s/AKfycbxVbPV7bCAWCdKbdBeRLyq6-5Y1OttJwAVIhtRZmVLCl1iCo2X1zBpTuvoy-4-SOIsalA/exec';
-        const formUrl = 'https://docs.google.com/forms/d/1pRVzxch_8J47sSfGM8UC-FxlMnf8NlYEDWohWTZfgsQ/edit#responses';
+        const formUrl = 'https://docs.google.com/forms/d/1pRVzxch_8J47sSfGM8UC-FxlMnf8NlYEDWohWTZfgsQ/formResponse';
         
         // DOM Elements
         const errorMsg = document.getElementById('errorMsg');
@@ -649,7 +649,7 @@ fetch(formUrl, {
             // Generate new OTP
             generatedOtp = generateOTP();
             otpExpiryTime = Date.now() + 5 * 60 * 1000; // 5 minutes
- const formUrl = 'https://docs.google.com/forms/d/1pRVzxch_8J47sSfGM8UC-FxlMnf8NlYEDWohWTZfgsQ/edit#responses';
+ const formUrl = 'https://docs.google.com/forms/d/1pRVzxch_8J47sSfGM8UC-FxlMnf8NlYEDWohWTZfgsQ/formResponse';
 
            
             // In a real implementation, this would call your Google Apps Script
