--- a/index.html
+++ b/index.html
@@ -354,9 +354,9 @@
                 <!-- Plan 2 -->
                 <div class="bg-white rounded-xl shadow-sm p-6 border card-hover">
                     <h3 class="text-2xl font-semibold mb-2">Starter</h3>
-                    <p class="text-3xl font-bold mb-4">₹3999 / mo</p>
+                    <p class="text-3xl font-bold mb-4">₹2999 / mo</p>
                     <ul class="space-y-2 text-sm mb-6">
-                        <li class="flex items-start gap-2"><i data-lucide="check" class="w-4 h-4 mt-0.5 text-blue-600 shrink-0"></i> 4 live classes</li>
+                        <li class="flex items-start gap-2"><i data-lucide="check" class="w-4 h-4 mt-0.5 text-blue-600 shrink-0"></i> 8 live classes</li>
                         <li class="flex items-start gap-2"><i data-lucide="check" class="w-4 h-4 mt-0.5 text-blue-600 shrink-0"></i> Parent dashboard</li>
                         <li class="flex items-start gap-2"><i data-lucide="check" class="w-4 h-4 mt-0.5 text-blue-600 shrink-0"></i> Assignments & reviews</li>
                     </ul>
@@ -368,10 +368,10 @@
                 <!-- Plan 3 -->
                 <div class="bg-white rounded-xl shadow-sm p-6 border card-hover">
                     <h3 class="text-2xl font-semibold mb-2">Pro</h3>
-                    <p class="text-3xl font-bold mb-4">₹8999 / mo</p>
+                    <p class="text-3xl font-bold mb-4">₹4999 / mo</p>
                     <ul class="space-y-2 text-sm mb-6">
-                        <li class="flex items-start gap-2"><i data-lucide="check" class="w-4 h-4 mt-0.5 text-blue-600 shrink-0"></i> 8 live classes</li>
-                        <li class="flex items-start gap-2"><i data-lucide="check" class="w-4 h-4 mt-0.5 text-blue-600 shrink-0"></i> Priority support</li>
+                        <li class="flex items-start gap-2"><i data-lucide="check" class="w-4 h-4 mt-0.5 text-blue-600 shrink-0"></i> 8+2 live classes</li>
+                        <li class="flex items-start gap-2"><i data-lucide="check" class="w-4 h-4 mt-0.5 text-blue-600 shrink-0"></i> writing coaching</li>
                         <li class="flex items-start gap-2"><i data-lucide="check" class="w-4 h-4 mt-0.5 text-blue-600 shrink-0"></i> Certificates & showcases</li>
                     </ul>
                     <button class="w-full py-3 bg-blue-600 text-white rounded-2xl hover:bg-blue-700 transition-colors font-medium">
@@ -522,4 +522,5 @@
             const animatedElements = document.querySelectorAll('.card-hover');
             
             const observer = new IntersectionObserver((entries
+
 
