Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -34,30 +34,31 @@
     </style>
 </head>
 <body class="bg-gray-50 text-gray-900">
-    <!-- Navbar -->
-    <header class="sticky top-0 z-40 border-b bg-white/80 backdrop-blur">
-        <div class="max-w-7xl mx-auto px-4 md:px-8 h-16 flex items-center justify-between">
-            <div class="flex items-center gap-2">
-                <i data-lucide="sparkles" class="w-6 h-6 text-blue-600"></i>
-                <span class="font-bold text-lg text-blue-600">SparkLearn</span>
-            </div>
-            <nav class="hidden md:flex items-center gap-6 text-sm">
-                <a href="#programs" class="hover:text-blue-600 transition-colors">Programs</a>
-                <a href="#features" class="hover:text-blue-600 transition-colors">Features</a>
-                <a href="#outcomes" class="hover:text-blue-600 transition-colors">Outcomes</a>
-                <a href="#pricing" class="hover:text-blue-600 transition-colors">Pricing</a>
-                <a href="#faq" class="hover:text-blue-600 transition-colors">FAQ</a>
-            </nav>
-            <div class="flex items-center gap-2">
-  <a href="login.html" class="px-4 py-2 rounded-lg text-blue-600 hover:bg-blue-50 transition-colors">
-    Log in
-  </a>
-  <a href="trial.html" class="px-4 py-2 bg-blue-600 text-white rounded-2xl hover:bg-blue-700 transition-colors">
-    Book Free Trial
-  </a>
-            </div>
+   <!-- Navigation -->
+<header class="sticky top-0 z-40 border-b bg-white/80 backdrop-blur">
+    <div class="max-w-7xl mx-auto px-4 md:px-8 h-16 flex items-center justify-between">
+        <div class="flex items-center gap-2">
+            <i data-lucide="sparkles" class="w-6 h-6 text-blue-600"></i>
+            <span class="font-bold text-lg text-blue-600">SparkLearn</span>
         </div>
-    </header>
+        <nav class="hidden md:flex items-center gap-6 text-sm">
+            <a href="#programs" class="hover:text-blue-600 transition-colors">Programs</a>
+            <a href="#features" class="hover:text-blue-600 transition-colors">Features</a>
+            <a href="about.html" class="hover:text-blue-600 transition-colors">About</a>
+            <a href="#outcomes" class="hover:text-blue-600 transition-colors">Outcomes</a>
+            <a href="#pricing" class="hover:text-blue-600 transition-colors">Pricing</a>
+            <a href="#faq" class="hover:text-blue-600 transition-colors">FAQ</a>
+        </nav>
+        <div class="flex items-center gap-2">
+            <a href="login.html" class="px-4 py-2 rounded-lg text-blue-600 hover:bg-blue-50 transition-colors">
+                Log in
+            </a>
+            <a href="signup.html" class="px-4 py-2 bg-blue-600 text-white rounded-2xl hover:bg-blue-700 transition-colors">
+                Book Free Trial
+            </a>
+        </div>
+    </div>
+</header>
 
     <!-- Hero Section -->
     <section class="relative overflow-hidden">
@@ -522,6 +523,7 @@
             const animatedElements = document.querySelectorAll('.card-hover');
             
             const observer = new IntersectionObserver((entries
+
 
 
 
